# fastapi-backend

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  logger_config.json  pyproject.toml  requirements.txt
app/: main.py
app/api/dependencies/: __init__.py  authentication.py  database.py
app/api/routes/: __init__.py  authentication.py  user.py  users.py
app/core/: __init__.py  events.py  settings.py
app/core/app_logging/: __init__.py  _logger.py  json_formatter.py  logger.py
app/core/environments/: __init__.py  development.py  environment.py  production.py  test.py
app/db/: __init__.py  connection.py  events.py
app/db/migrations/: env.py
app/db/migrations/versions/: 1f389bf96c32_.py  3e5a00efdcc8_.py  561974e39740_.py  82f6697070ce_.py  b4b1db14b59e_.py  c1c735a2e1c6_.py
app/db/repositories/: __init__.py  repository.py  users.py
app/models/: __init__.py
app/models/alchemy/: __init__.py  users.py
app/models/dto/: __init__.py  users.py
app/models/orm/: __init__.py  common.py  users.py
app/models/schemas/: __init__.py  base.py  users.py
app/models/tables/: __init__.py  table.py
app/resources/: strings.py
app/services/: authentication.py  jwt.py
depricated/: .env.example  .gitignore  alembic.ini  pyproject.toml
depricated/src/: main.py
depricated/src/api/: dependencies.py
depricated/src/api/routes/: __init__.py  auth.py  default.py  tasks.py
depricated/src/core/: config.py  events.py
depricated/src/core/environments/: __init__.py  development.py  environment.py  test.py
depricated/src/db/: postgres_connection.py  redis_connection.py
depricated/src/db/repositories/: tasks.py  users.py
depricated/src/models/schemas/: users.py
depricated/src/services/: auth.py
depricated/tests/: database.py  sorting.py
resources/: fast-api-backend-uml.drawio
scripts/: start.sh
src/: main.py
src/api/: dependencies.py  errors.py
src/api/dependencies/: __init__.py  authentication.py  database.py
src/api/routes/: __init__.py  articles.py  auth.py  authentication.py  default.py  tasks.py  user.py
src/core/: config.py  dependencies.py  events.py  paths.py  settings.py
src/core/app_logging/: logger.py
src/core/environments/: __init__.py  development.py  environment.py  production.py  test.py
src/db/: connection.py  db_postgres.py  db_redis.py  db_session.py  events.py  postgres.py  redis.py  tables.py
src/db/migrations/: env.py
src/db/migrations/versions/: 307b5fb5b2f9_.py  88267e58f3b6_.py  9f84ae3c1156_.py  a64b5f60d0ff_.py  (+5 more)
src/db/repositories/: articles.py  repository.py  tasks.py  users.py
src/fastapi_server/: alembic.ini  pyproject.toml
src/fastapi_server/app/core/: paths.py  settings.py
src/migrations/: env.py
src/models/: tables.py  tasks.py  users.py
src/models/schemas/: articles.py  base.py  tasks.py  users.py
src/models/tables/: __init__.py  table.py
src/resources/: strings.py
src/services/: articles.py  auth.py  authentication.py  jwt.py  security.py  tasks.py
tests/: database.py  database2.py  env.py  logger.py  requesting.py
