[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["wnkbll <arzhevitin.g@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.31"
alembic = "^1.13.2"
loguru = "^0.7.2"
redis = {extras = ["hiredis"], version = "^5.0.7"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
